@@ -14,6 +14,7 @@
    * Add a few profiles for Amazon Prime
    * Add new FCE rule: "Remove first dash in non-dialogs"
    * Add "Video - Generate blank video" - thx OmrSi
+   * Add "Video - Generate video w burned-in sub"
 * IMPROVED:
    * Update Bulgarian translation - thx Калин
    * Update Chinese translation - thx nkh0472
